[gd_scene load_steps=7 format=3 uid="uid://b8ymaxmryohec"]

[ext_resource type="Script" uid="uid://ca3wgi2nycvgh" path="res://main.gd" id="1_ig7tw"]
[ext_resource type="Script" uid="uid://cqsg3s5iuc3ef" path="res://player_spawner.gd" id="2_0xm2m"]
[ext_resource type="PackedScene" uid="uid://d1xkf54fmt3h4" path="res://character.tscn" id="3_h2yge"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_7dm0k"]

[sub_resource type="Sky" id="Sky_ig7tw"]
sky_material = SubResource("ProceduralSkyMaterial_7dm0k")

[sub_resource type="Environment" id="Environment_0xm2m"]
background_mode = 2
sky = SubResource("Sky_ig7tw")

[node name="Main" type="Node"]
script = ExtResource("1_ig7tw")

[node name="PlayerSpawner" type="MultiplayerSpawner" parent="."]
_spawnable_scenes = PackedStringArray("uid://d1xkf54fmt3h4")
spawn_path = NodePath("../World")
script = ExtResource("2_0xm2m")
player = ExtResource("3_h2yge")

[node name="Menu" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="Menu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="Menu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 30

[node name="VBoxContainer" type="VBoxContainer" parent="Menu/MarginContainer"]
layout_mode = 2

[node name="HostButton" type="Button" parent="Menu/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "HOST"

[node name="JoinButton" type="Button" parent="Menu/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 100
text = "JOIN"

[node name="World" type="Node3D" parent="."]

[node name="Camera3D" type="Camera3D" parent="World"]
transform = Transform3D(1, 0, 0, 0, 0.90403, -0.427468, 0, 0.427468, 0.90403, 0, -0.736981, 2.06338)
current = true

[node name="WorldEnvironment" type="WorldEnvironment" parent="World"]
environment = SubResource("Environment_0xm2m")

[connection signal="pressed" from="Menu/MarginContainer/VBoxContainer/HostButton" to="." method="_on_host_button_pressed"]
[connection signal="pressed" from="Menu/MarginContainer/VBoxContainer/JoinButton" to="." method="_on_join_button_pressed"]
